07-AGIC-Cookie-based-Affinity/01-kube-manifests-cookie-affinity/02-EchoServer-ClusterIP-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-clusterip-service
  labels:
    app: echoserver
spec:
  type: ClusterIP
  selector:
    app: echoserver
  ports:
    - port: 80
      targetPort: 8080
